音楽入れた

--- a/cheeze/cheeze.html
+++ b/cheeze/cheeze.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="cheeze.reset.css">
   <link rel="stylesheet" href="cheeze.styles.css">
+  <link rel="stylesheet" href="music.js">
   <title>チーズ</title>
 </head>
 <body>
@@ -38,15 +39,16 @@
       
         <div class="content">
           <div class="comando">
-            <p>たたかう</p>
-            <p>にげる</p>
-            <p>まほう</p>
-            <p>にげる</p>
+            <p class="comando_p">たたかう</p>
+            <p class="comando_p">にげる</p>
+            <p class="comando_p">まほう</p>
+            <p class="comando_p">にげる</p>
           </div>
           <div class="text-box">
             <p>ラスボスがあらわれた!</p>
           </div>         
         </div>
-    
-</body>
+      </body>
+      <!-- 音楽読み込み -->
+      <audio controls autoplay loop src="./maou.mp3"></audio>
 </html>
